# weather-uploader

./: .env.example  Cargo.toml  Containerfile
.github/workflows/: ci.yml
src/: config.rs  conversions.rs  handlers.rs  lib.rs  main.rs  models.rs  upload.rs
